--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 <body>
     <app-root>
         <div class="splash-screen">
-            <div class="splash-loader" />
+            <div class="splash-loader"></div>
         </div>
     </app-root>
 </body>
