message success managed 6

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
   <!-- Layout CSS -->
   <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/theme-blue.css">
   <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-blue.css">
+
+    <script lang="javascript" src="dist/xlsx.full.min.js"></script>
+
 </head>
 <body>
     <app-root>
