--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
   <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/theme-blue.css">
   <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-blue.css">
 
-    <script lang="javascript" src="dist/xlsx.full.min.js"></script>
+   <script src="xlsx.full.min.js"></script>
+
 
 </head>
 <body>
