--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,11 @@
   <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-blue.css">
 
    <script src="xlsx.full.min.js"></script>
+    <script lang="javascript" src="dist/xlsx.full.min.js"></script>
+    <!-- add the shim first -->
+    <script type="text/javascript" src="shim.min.js"></script>
+    <!-- after the shim is referenced, add the library -->
+    <script type="text/javascript" src="xlsx.full.min.js"></script>
 
 
 </head>
