--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,13 @@
   <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/theme-blue.css">
   <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-blue.css">
 
+    <!-- add the shim first -->
+    <script type="text/javascript" src="shim.min.js"></script>
+    <!-- after the shim is referenced, add the library -->
+    <script type="text/javascript" src="xlsx.full.min.js"></script>
 
 
+    <script lang="javascript" src="dist/xlsx.full.min.js"></script>
 
 </head>
 <body>
