downgrade systemjs to 01927

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
   <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-blue.css">
 
 
-    <script src="systemjs.config.js"></script>
+   <!-- <script src="systemjs.config.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
-
+-->
 
     <!-- &lt;!&ndash; add the shim first &ndash;&gt;
      <script type="text/javascript" src="shim.min.js"></script>
